--- a/ProductPage/style.css
+++ b/ProductPage/style.css
@@ -4,6 +4,15 @@ body {
 	margin: 0%;
 }
 
+form,
+input,
+main,
+h1,
+.optionitem {
+
+	font-family: 'Grand Hotel', serif;
+}
+
 nav {
 	margin: auto;
 	font-size: 2.2em;
@@ -38,7 +47,7 @@ form {
 	font-size: 1.5em;
 }
 
-form input {
+.home-form input {
 	height: 30px;
 	margin: 1%;
 	width: 50%;
@@ -113,6 +122,7 @@ form input {
 
 .section-container {
 	margin: 50px;
+	width: 80%;
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
@@ -259,4 +269,37 @@ form input {
 	background: linear-gradient(rgb(14, 110, 124), #888888);
 	/* #888888; */
 	padding-bottom: 150px;
+}
+
+
+.radio-option {
+	/* HIDE RADIO */
+	/* visibility: hidden; */
+	/* Makes input not-clickable */
+	/* position: absolute; */
+	/* Remove input from document flow */
+}
+
+.optionitem {
+	/* IMAGE STYLES */
+	cursor: pointer;
+	border: 2px solid transparent;
+}
+
+.optionitem:hover {
+	background-color: rgba(178, 229, 203, 0.4);
+	border: solid rgba(63, 191, 127, 0.1);
+	border-radius: 5px;
+}
+
+input~label:active {
+	border: solid green;
+}
+
+input:checked+.optionitem {
+	/* (RADIO CHECKED) IMAGE STYLES */
+	padding: 2px;
+	border: 2px solid rgba(63, 191, 127);
+	border-radius: 5px;
+	background-color: rgba(178, 229, 203, 0.4);
 }
