Update kapperzaak image ext
Update kapperzaak image ext from jpg to JPG

--- a/style.css
+++ b/style.css
@@ -159,7 +159,7 @@ form {
 	background:
 		linear-gradient(rgba(245, 245, 245, 0.2),
 		rgba(245, 245, 245, 0.3), rgba(14, 110, 124, 0.3)),
-		url(kapperzaak.jpg);
+		url(kapperzaak.JPG);
 	background-size: 100%;
 	min-width: 327px;
 	background-repeat: no-repeat;
